<resources>
    <string name="app_name">uTrack</string>
    <string name="usersettings">User Settings</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>

    <string name="back">Back</string>

    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="askname">Real name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="accountmessage2">Do you have an account?</string>
    <string name="accountmessage1">Don\'t have an account?</string>

    <string name="training">Training</string>
    <string name="language">Language</string>
    <string name="info">Information</string>
    <string name="yourdata">Your Data</string>
    <string name="account">Account</string>

    <string name="uTrack">µTrack</string>

    <string name="capturedata">Capture Data</string>
    <string name="export">Export Data</string>
    <string name="clear">Clear Data</string>


    <string name="height">Height:</string>
    <string name="disk">Disk teeth:</string>
    <string name="frame">Frame size:</string>
    <string name="pinion">Pinion teeth:</string>
    <string name="potencia">Stem:</string>

    <string name="bike_height_hint">Put the height here</string>
    <string name="bike_disk_hint">Put the disk teeth here</string>
    <string name="bike_frame_hint">Put the frame size here</string>
    <string name="bike_pinion_hint">Put the pinion teeth here</string>
    <string name="bike_potencia_hint">Put the stem here</string>

    <string name="trainingstart">START</string>
    <string name="trainingresume">RESUME</string>
    <string name="trainingstop">STOP</string>
    <string name="trainingpouse">PAUSE</string>
    <string name="trainingprogress">training in progress</string>
    <string name="trainingfinilized">training finished</string>
    <string name="trainingpaused">training paused</string>


    <string name="saveButton">save Button</string>
    <string name="save">SAVE</string>

    <string name="spflag">Spanish flag</string>
    <string name="frflag">French flag</string>
    <string name="inflag">British flag</string>
    <string name="geflag">German flag</string>
    <string name="catflag">Catalan flag</string>

    <string name="maintext">Making your pedaling faster</string>

    <string name="heartrate">000bpm</string>
    <string name="speedrate">00\'00kph</string>
    <string name="cadencerate">000rpm</string>
    <string name="duration">00,00min</string>

    <string name="avgheartrate">000bpm</string>
    <string name="avgspeed">00\'00kph</string>
    <string name="avgcadencerate">000rpm</string>

    <string name="informationText">This application was developed to improve your performance as a cyclist. All rights reserved. This application was created by : \n ·Daniel Yeste \n ·Joan Domenech \n
        ·Jorge Vinagre \n ·Daniel Geruous-Fares \n</string>


    <string name="durationhint">time</string>
    <string name="savePopUpText">Do you want to save the changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <!-- TODO class exercise that contain a string table full of exercises like this one -->
    <string name="recomendedexercise"> Recommended Exercise?. \nYou are ready to go</string>
    <string name="recomendedexerciseyes">Let\'s go</string>
    <string name="recomendedexerciseno">Another day</string>
    <string name="trainingawesome">Awesome</string>
    <string name="trainingsad">Maybe next time</string>
    <string name="sessionsaved">Session saved</string>
    <string name="sessionnotsaved">well done</string>
    <string name="savesession">Save Session?</string>
    <string name="continuesesion">Continue</string>
    <string name="notefication">Hey wait</string>

    <string name="bluetooth">You are not connected to a device, please connect to one or start session without one \n </string>
    <string name="choose_device">Choose Device</string>
    <string name="continue_without_device">Start Session</string>
    <string name="blutooth_not_available">Bluetooth is not available</string>
    <string name="bluetooth_available">Bluetooth is available</string>
    <string name="discover_devices">Discover Devices</string>
    <string name="refresh_discovering">Refresh Scan</string>

    <string name="recommended1">Stretch your legs for 5 minutes</string>
    <string name="recommended2">Stretch your legs for 5 minutes and rest for another 5 min</string>
    <string name="recommended3">Do laps at a constant speed of 30 Km/h for 10 min</string>
    <string name="recommended4">Do laps at a constant speed of 30 Km/h for 15 min</string>
    <string name="recommended5">Progessive exercise starting with a speed of 25 Km/h and then stop for muscle stretching for 5 min</string>
    <string name="recommended6">Laps at 40 Km/h for 10-15 min, stretch legs and do physichal exercises at the gym</string>
    <string name="recommended7">Laps at a constant speed of 40 Km/h over the blue line</string>
    <string name="recommended8">Laps at a constant speed of 35 Km/h over the blue line, every 5 laps switch to black line and increase speed to 45 Km/h for 2 laps, go back to blue line with earlier speed for 1 more lap</string>

    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">please activate Location for better performance</string>
    <string name="ok">"activate "</string>
    <string name="textViewSessionsRealitzades">Sessions realitzades</string>

</resources>
