<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userSettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appMainColor"
    android:orientation="vertical"
    android:weightSum="20">

    <ImageButton
        android:id="@+id/backButtonSettingsPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackUserSettingsButtonPressed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/back" />

    <ScrollView
        android:background="@color/appMainColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="11"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frame"
                android:textColor="@color/blackColor"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/rosauserColor"
                android:ems="10"
                android:hint="@string/bike_frame_hint"
                android:inputType="textPersonName"
                android:text="@string/frame"
                android:textColor="@color/blackColor"
                android:textSize="30sp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/blackColor"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/rosauserColor"
                android:ems="10"
                android:hint="@string/bike_height_hint"
                android:inputType="textPersonName"
                android:text="@string/height"
                android:textColor="@color/blackColor"
                android:textSize="30sp"
                android:autofillHints="@string/height" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/disk"
                android:textColor="@color/blackColor"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@color/rosauserColor"
                android:ems="10"
                android:hint="@string/bike_disk_hint"
                android:inputType="textPersonName"
                android:text="@string/disk"
                android:textColor="@color/blackColor"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pinion"
                android:textColor="@color/blackColor"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/pinion"
                android:background="@color/rosauserColor"
                android:ems="10"
                android:hint="@string/bike_pinion_hint"
                android:inputType="textPersonName"
                android:text="@string/pinion"
                android:textColor="@color/blackColor"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/potencia"
                android:textColor="@color/blackColor"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/rosauserColor"
                android:ems="10"
                android:hint="@string/bike_potencia_hint"
                android:inputType="textPersonName"
                android:text="@string/potencia"
                android:textColor="@color/blackColor"
                android:textSize="30sp"
                android:autofillHints="@string/potencia" />
        </LinearLayout>

    </ScrollView>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:adjustViewBounds="true"
        android:layout_weight="16"
        android:background="@color/appMainColor"
        android:contentDescription="@string/saveButton"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_button_save" />

    <TextView
        android:id="@+id/save_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/blackColor"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:background="@color/appMainColor"
        android:contentDescription="@string/save"
        android:scaleType="fitCenter"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="30sp"
        />

</LinearLayout>