<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/appOrangeMainColor"
    >

    <Button
        android:background="@color/yellowishColor"
        android:textColor="@color/blackColor"
        android:id="@+id/usersettingsbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        android:text="@string/usersettings" />

    <Button
        android:background="@color/yellowishColor"
        android:textColor="@color/blackColor"
        android:id="@+id/accountbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/account" />

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/infobutton"
        android:background="@color/yellowishColor"
        android:textColor="@color/blackColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info" />

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/backbutton2"
        android:background="@color/yellowishColor"
        android:textColor="@color/blackColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>