<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signUpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appMainColor">

    <Button
        android:id="@+id/signUpToSignInbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/whiteColor"
        android:ems="10"
        android:text="@string/signin"
        android:fontFamily="@font/audiowide"
        android:textColor="@color/textMainColor" />

    <EditText
        android:id="@+id/signUpUsername"
        style="@style/BlackText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/username"
        android:background="@color/whiteColor"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/textMainColor" />


    <EditText
        android:id="@+id/signUpPassword"
        style="@style/BlackText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/signUpUsername"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:autofillHints="@string/password"
        android:background="@color/whiteColor"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/textMainColor" />

    <EditText
        android:id="@+id/signUpConfirmPassword"
        style="@style/BlackText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/signUpPassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:autofillHints="@string/password"
        android:background="@color/whiteColor"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:textColor="@color/textMainColor" />

    <EditText
        android:id="@+id/signUpRealName"
        style="@style/BlackText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/signUpConfirmPassword"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:autofillHints="@string/password"
        android:background="@color/whiteColor"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="@string/askname"
        android:inputType="text"
        android:textColor="@color/textMainColor" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpEmail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:background="@color/whiteColor"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:text="@string/signup"
        android:textColor="@color/textMainColor" />

    <EditText
        android:id="@+id/signUpEmail"
        style="@style/BlackText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/signUpRealName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:autofillHints="@string/email"
        android:background="@color/whiteColor"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textMainColor" />

    <TextView
        android:id="@+id/signInText"
        style="@style/WhiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:text="@string/accountmessage2"
        android:textColor="@color/textMainColor" />

</RelativeLayout>