<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jorgecolor">

    <Button
        android:id="@+id/trainingbutton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellowishColor"
        android:layout_marginTop="50dp"
        android:text="@string/training" />

    <Button
        android:id="@+id/databutton2"
        android:background="@color/yellowishColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/yourdata" />

    <Button
        android:id="@+id/settingsbutton2"
        android:background="@color/yellowishColor"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

</LinearLayout>