<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/accountSettingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appMainColor"
    android:orientation="vertical"
    android:weightSum="20">

    <ImageButton
        android:id="@+id/backButtonAccountSettingsPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/accountNameText"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/accountNameEdit"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/accountPassText"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/accountPassEdit"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <TextView
        android:id="@+id/accountPassCheckText"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmpassword" />

    <EditText
        android:id="@+id/accountPassCheckEdit"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmpassword"
        android:ems="10"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/accountRnameText"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askname" />

    <EditText
        android:id="@+id/accountRnameEdit"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/askname"
        android:ems="10"
        android:hint="@string/askname"
        android:inputType="textPersonName"/>
    <TextView
        android:id="@+id/accountemailText"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/accountemailEdit"
        style="@style/BlackText"
        android:textSize="15sp"
        android:textColor="@color/textMainColor"
        android:fontFamily="@font/audiowide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="12"
        android:layout_marginVertical="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/saveButtonAccountSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="7"
        android:adjustViewBounds="true"
        android:background="@color/appMainColor"
        android:contentDescription="@string/saveButton"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon_button_save" />

    <TextView
        android:id="@+id/save_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:textColor="@color/textMainColor"        
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:adjustViewBounds="true"
        android:background="@color/appMainColor"
        android:contentDescription="@string/save"
        android:gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:text="@string/save"
        android:textAlignment="center"
        android:textSize="12sp"
        />



</LinearLayout>